--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body{ background-color:  #F3F3F3;
 
 .conteudo {
   width: 100%;
-  height: 507px;
+  height: 100%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
   margin-top:26px;
@@ -27,25 +28,53 @@ body{ background-color:  #F3F3F3;
 
 }
 
+.hora{font-size: 14px;
+  color: #AAAAAA;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: flex-start;
+  padding-right: 10px;
+  padding-left: 5px;
+}
+.texto{font-size: 14px;
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  display: inline-block;
+  word-break: break-word;
+  flex-wrap: wrap;
+  text-align: left;
+}
+
+.texto span{padding-right: 5px;
+
+}
+
+  
+
+.caixa{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 2px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .cinza{
-    width: 100%;
-    height: 40px;
-    background-color: #DCDCDC;
+    
+  background-color: #DCDCDC;
 }
+.branca { background-color: #FFFFFF;
 
-.branca{
-    width: 100%;
-    height: 40px;
-    background-color: #FFFFFF;
 }
-
-
-.rosa{
-    width: 100%;
-    height: 63px;
+.rosa{  
     background-color:#FFDEDE;
 }
+input{border: none;
+      outline: none;
 
+}
 .baixo{
   width: 100%;
   height: 80px;
