--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body{ background-color:  #F3F3F3;
 .rosa{  
     background-color:#FFDEDE;
 }
-input{border: none;
+.caixatexto{border: none;
       outline: none;
 
 }
